fixed grid and spacing

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ section{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
-    row-gap: 50px;
+    row-gap: 25px;
 }
 
 section > h2{
@@ -63,6 +63,7 @@ section > h2{
     display: block;
     padding: 0px 10px;
     box-shadow: 2px 2px 4px #0000000f;
+    grid-column: 2 / 3;
 }
 
 .card:hover{
